# MorseTranslator

./: .gitignore  README.md
morse_translator/: CMakeLists.txt  Main.qml  filehandler.cpp  filehandler.h  hashtable.cpp  hashtable.h  main.cpp  morseencoder.cpp  morseencoder.h  trie.cpp  trie.h
morse_translator/qml/: CustomFileDialog.qml  CustomTextArea.qml  Main.qml
morse_translator/src/: filehandler.cpp  filehandler.h  morseencoder.cpp  morseencoder.h
